// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateLockFile catches errors 1`] = `Array []`;

exports[`generateLockFile catches errors 2`] = `Array []`;

exports[`generateLockFile finds npm embedded in renovate 1`] = `Array []`;

exports[`generateLockFile finds npm embedded in renovate 2`] = `Array []`;

exports[`generateLockFile finds npm globally 1`] = `Array []`;

exports[`generateLockFile finds npm globally 2`] = `Array []`;

exports[`generateLockFile generates lock files 1`] = `
Array [
  "node node_modules/npm/bin/npm-cli.js dedupe",
]
`;

exports[`generateLockFile generates lock files 2`] = `
Array [
  Object {
    "cwd": "some-dir",
    "encoding": "utf-8",
    "env": Object {},
  },
]
`;

exports[`generateLockFile performs full install 1`] = `Array []`;

exports[`generateLockFile performs full install 2`] = `Array []`;

exports[`generateLockFile performs lock file updates 1`] = `
Array [
  "node node_modules/npm/bin/npm-cli.js install --package-lock-only --no-audit some-dep@1.0.1",
]
`;

exports[`generateLockFile performs lock file updates 2`] = `
Array [
  Object {
    "cwd": "some-dir",
    "encoding": "utf-8",
    "env": Object {},
  },
]
`;

exports[`generateLockFile performs npm-shrinkwrap.json updates (no package-lock.json) 1`] = `Array []`;

exports[`generateLockFile performs npm-shrinkwrap.json updates (no package-lock.json) 2`] = `Array []`;

exports[`generateLockFile performs npm-shrinkwrap.json updates 1`] = `Array []`;

exports[`generateLockFile performs npm-shrinkwrap.json updates 2`] = `Array []`;

exports[`generateLockFile uses fallback npm 1`] = `Array []`;

exports[`generateLockFile uses fallback npm 2`] = `Array []`;
